# next-gen-aiam

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
apps/: README.md  pca_dislocation_dashboard.py
configs/: phase6_artifact_manifest.yaml
docs/: architecture.md  paper1_migration_map.md  refs.bib  results.md
notebooks/: 00_overview.ipynb  01_families_comparison.ipynb  01_paper_reproduction.ipynb  01_static_baselines.ipynb  02_practitioner_analytics.ipynb  03_ml_strategies.ipynb  04_dl_strategies.ipynb  04b_dl_strategies_cuda.ipynb  04c_dl_policy_strategies_cuda.ipynb  04f_rl_n29_training.ipynb  04g_rl_ppo.ipynb  05_dl_portfolio_construction_exploration.ipynb  05b_cross_asset_deep_momentum.ipynb  06_llm_bl_views.ipynb  06a_rl_reinforce.ipynb  06b_rl_ppo.ipynb  06c_rl_single_asset_dqn.ipynb  07_unsupervised_representation_learning.ipynb  07b_pca_dislocation_macro_momentum_dashboard.ipynb  08_llm_bl_views.ipynb  09_learned_synthesis.ipynb  99_reproducibility_guard.ipynb  _archived_01_static_baselines_pre_split.ipynb  _shared.py
paper1/: appA_universe.md  appB_strategy_zoo.md  appC_master_table.md  appD_regime_pipeline.md  appE_statistical_robustness.md  appF_transaction_costs.md  appG_subperiod.md  appH_reproducibility.md  glossary.md  sec0_front_matter.md  sec1_introduction.md  sec2_data_methods.md  sec3_vmp.md  sec4_estimator.md  sec5_regimes.md  sec6_costs_survival.md  sec7_conclusion.md
scripts/: _add_s16_hp_sensitivity.py  _add_viz_cells.py  build_all_strategies_29.py  build_canonical_strategies.py  build_no_btc_strategies.py  (+34 more)
(+486 files in other folders)
