[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiam"
version = "0.0.1"
description = "Comparative model harness for AI-driven asset management"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "frasagui" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "nbstripout>=0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
